# Thesis

./: .gitignore  README.md
ThesisTestSource/: CMakeLists.txt  complete_graph.py  main.cpp  semi_dense_graph  sparse_graph  trim_graph.py  unique_graph.py  very_sparse_graph
ThesisTestSource/ApproximationDistanceOracle/: ChechikGeneralADO.hpp  ThorupZwickGeneralADO.hpp  WulffNilsenGeneralADO.hpp
ThesisTestSource/BaseClasses/: DistanceOracle.hpp
ThesisTestSource/HelperTypes/: AdjecencyMatrix.hpp  ClusterCover.cpp  ClusterCover.hpp  Dijkstra.cpp  Dijkstra.hpp  DistanceMatrix.hpp  Edge.hpp  HashTable2Level.hpp  Logger.cpp  Logger.hpp  Matrix.hpp  MinHeap.hpp  PrimeGenerator.cpp  PrimeGenerator.hpp  SortedDistanceMatrix.hpp  ThorupSingleSourceShortestPath.cpp  ThorupSingleSourceShortestPath.hpp  Types.hpp
ThesisTestSource/results/: thorup_real_world_13.txt  thorup_real_world_18.txt  thorup_real_world_2.txt  thorup_real_world_3.txt  thorup_real_world_8.txt  update.py  wulff_real_world_10.txt  wulff_real_world_13.txt  wulff_real_world_15.txt  wulff_real_world_18.txt  wulff_real_world_2.txt  wulff_real_world_3.txt  wulff_real_world_5.txt  wulff_real_world_8.txt
ThesisTestSource/results/collected_results/: thorup_complete_graph_collected.csv  thorup_dense_graph_collected.csv  thorup_sparse_graph_collected.csv  wulff_semi_dense_graph_collected.csv  wulff_very_sparse_graph_collected.csv
ThesisTestSource/results/density_results/: thorup_complete_13.txt  thorup_complete_2.txt  thorup_complete_3.txt  thorup_complete_5.txt  thorup_complete_8.txt  thorup_complete_graph_10.txt  thorup_complete_graph_13.txt  thorup_complete_graph_2.txt  thorup_complete_graph_3.txt  (+81 more)
(+88 files in other folders)
